--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,6 +1,6 @@
 [".zprezto-contrib/zsh-cargo-completion"]
     type = "archive"
-    url = "https://github.com/MenkeTechnologies/zsh-cargo-completion" 
+    url = "https://github.com/MenkeTechnologies/zsh-cargo-completion/archive/master.tar.gz" 
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
