--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -4,3 +4,10 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+[".tmux"]
+    type = "archive"
+    url = "https://github.com/gpakosz/.tmux/archive/master.tar.gz" 
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
+
